# fastapi_async

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  env_example  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py  models.py  schemas.py  utils.py
app/routers/: content.py  frequency.py
k8s/: fastapi_deployment.yaml  fastapi_service.yaml  secret.yaml
